*relative header container,links:hover, nav z-index

--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
     <header>
         <div class="bg-img">
         </div>
+        <div class="rel-header">
+            <div >
+                <ol class="list-header">
+                    <li ><a class="link-header" href="#">PEOPLE.COM</a>
+                        <span>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 48" aria-hidden="true" style="transform: rotate(180deg)" tabindex="-1">
+                            <path fill="#00aeef" d="M19.98 5L4 24.2l15.98 19.2.02-4.512L7.874 24.2 20 9.512z"></path>
+                          </svg>
+                        </span>
+                    </li>
+                    <li>
+                        <a  class="link-header"  href="#">MOVIES</a>
+                    </li>
+                </ol>
+            </div>
+            <div class="description-cont">
+                <h1>Movies</h2>
+                <p>Get the latest movies news and features from PEOPLE.com, including awards show coverage and updates on film franchises.</p>
+            </div>
+        </div>
     </header>
 
     <main>
