*media querys for relative div and pre footer div

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </div>
         <div class="nav-right">
             <ul>
-                <a href="#"><li class="link-simple">Search</li></a>
-                <a href="#"><li class="link-simple">Your account</li></a>
+                <a href="#"><li class="link-simple link">Search</li></a>
+                <a href="#"><li class="link-simple link">Your account</li></a>
                 <a href="#" id="subs"><li class="link-simple bold">Subscribe</li></a>
             </ul>
         </div>
